# rmdecis

./: .gitignore  CMakeLists.txt  README.md  README.md.conan  build.bash  build.sh  conanfile.txt  install.bash  install.sh  interface.h  rmdecis.pc.in  test_interface.h  uninstall.sh
.circleci/: config.yml
compensator/: ballistic_compensator.cpp  ballistic_compensator.h
contrib/detection/: get_zhuangjiaban.h
example/: CMakeLists.txt  test_rmdecis.cpp
example/config/: camera_coeffs.yml  config.yml
general/: typing.h
include/: armor.h  basic_aiming.h  config.h  consts.h  large_rune_aiming.h  typing.h
reconstruct_3d/: cam_3D_reconstructor.cpp  cam_3D_reconstructor.h
reconstructor/: camera_calib.cpp  camera_calib.h  reconstructor.cpp  reconstructor.h  transformer.cpp  transformer.h
reconstructor/objects/: armor.h
src/compensator/: ballistic_compensator.cpp  ballistic_compensator.h
src/contrib/detection/: get_zhuangjiaban.h
src/contrib/munkres-cpp/: matrix.cpp  matrix.h  munkres.cpp  munkres.h
src/decision/: basic_aiming.cpp  basic_aiming.h
src/predictor/: trig_fitting.cpp  trig_fitting.h
src/reconstructor/: camera_calib.cpp  camera_calib.h  reconstructor.cpp  reconstructor.h  rune_reconstructor.cpp  rune_reconstructor.h  transformer.cpp  transformer.h
src/rmdecis/: basic_aiming.cpp  config.cpp  core.h  large_rune_aiming.cpp  large_rune_aiming.cpp.t
src/rmdecis_impl/: basic_aiming_impl.cpp  basic_aiming_impl.h  config_impl.cpp  config_impl.h  large_rune_aiming_impl.cpp  large_rune_aiming_impl.cpp.t  large_rune_aiming_impl.h  large_rune_aiming_impl.h.t
src/tracker/: armor_track.cpp  armor_track.h  track_kalman.cpp  track_kalman.h  track_kalman_factory.cpp  track_kalman_factory.h  tracker.cpp  tracker.h
src/typing/: armor.h  core.cpp  core.h  general.cpp  general.h  typing_general.cpp  typing_internal.cpp  typing_internal.h  typing_misc.cpp
src/utils/: avg_queue.h  config.cpp  config.h  cv_utils.cpp  cv_utils.h  debug.h  equation_solver.cpp  equation_solver.h  preprocess.h  trig_fitting.cpp  trig_fitting.h
tests/: calibrate_camera.cpp  test_armor_track.cpp  test_avg_queue.cpp  test_ballistic_compensator.cpp  test_basic_aiming.cpp  test_config.cpp  test_detection.cpp  test_equation_solver.cpp  test_kissfft.cpp  test_large_rune_aiming.cpp  test_reconstructor.cpp  test_rotated_rect.cpp  test_tracker.cpp  test_tracker_association.cpp  test_transformer.cpp  test_trig_fitting.cpp  test_video_playback.cpp
tracker/: armor.cpp  armor.h  armor_track.cpp  armor_tracker.cpp  armor_tracker.h  armor_tracker_mgr.cpp  armor_tracker_mgr.h  tracked_armor.cpp  tracked_armor.h  tracker.cpp  tracker.h
typing/: armor.h  general.h
utils/: armor_utils.h  construct_armor.h  cv_utils.h  equation_solver.cpp  equation_solver.h
utils/facilities/: armor.h
utils_contrib/: calibrate_camera.cpp  simple_video_player.cpp  simple_video_player.h  simulate_vision_result.cpp  simulate_vision_result.h
